organizamos nuestro archivo script.js

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
             <!-- Aquí se agregarán las nuevas filas -->
         </tbody>
     </table>
-
-<script src="conexion.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
