configuramos fetch para apuntar a la ruta del servidor

--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,13 @@
     
 </head>
 <body>
-
-       
-
-
     <h1>REGISTRO DE ACTIVIDADES OPERACIONES</h1>
 
     <div class="logo-container">
         <img src="imagenes/merkahorro.jpg" alt="Logo Merkahorro" class="logo">
     </div>
 
-    <form id="activityForm">
+    <form id="activityForm">git
         <div class="form-group">
             <label for="employee">Encargado:</label>
             <select id="employee" name="employee" required>
