ruta fetch organizada

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <img src="imagenes/merkahorro.jpg" alt="Logo Merkahorro" class="logo">
     </div>
 
-    <form id="activityForm">git
+    <form id="activityForm">
         <div class="form-group">
             <label for="employee">Encargado:</label>
             <select id="employee" name="employee" required>
