--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         </div>
 
 
-        <div class="form-group">
+        <div class="botonn">
             <button type="submit">Registrar Actividad</button>
         </div>
     </form>
